# forge

./: README.md  TODO.md  pyproject.toml
.idx/: dev.nix
docs/: file_layout.md  templates.md
forge/: __main__.py
forge/new/: __init__.py  project.py  template.py
tests/: test_new_command.py
