[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "forge"
version = "0.1.0"
description = "A smart, language-agnostic scaffolding and code generation tool."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name="Matthew Cory", email="matthewcory1@gmail.com" },
]
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Natural Language :: English",
    "Topic :: Software Development :: Code Generators",
    
]

dependencies = [
    "typer>=0.9.0", 
    "virtualenv>=20.24.5"
]

[project.urls]
"Homepage" = "https://github.com/SkittishSloth/forge"
"Bug Tracker" = "https://github.com/Skittis/forge/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
]

[tool.setuptools.packages.find]
where = ["forge"]

[tool.pytest.ini_options]
pythonpath = [
    "forge"
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.flake8]
max-line-length = 88
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist"
]